# MyChatGPT

./: CLAUDE.md  README.md  pyproject.toml
src/injestion/: load_document.py
test/: __init__.py  test_load_document.py
